Fixing backdrop blur for photo portfolio on Safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -426,6 +426,7 @@ button.back-button {
   display: flex;
   align-items: center;
   justify-content: center;
+  -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   flex-direction: column;
 
